--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -11,5 +11,4 @@
 * {
   all: unset;
   font-family: "JetBrainsMono NFM"; // Nerd Font Mono, Monospace for fixed icon width
-  font-weight: bolder;
 }
